--- a/content/dataset/PAGE/homeComments.yaml
+++ b/content/dataset/PAGE/homeComments.yaml
@@ -44,10 +44,8 @@ query_unified:  &query_unified
                                     ELSE                'ZA'
                                 END                             AS ProductForm,
                                 -------------- user
-
-                                -- TODO ---- From socios2 if nickname not defined
-                                C.NickName                      AS NickName,
-
+                                COALESCE(C.NickName, S.Nombres, STMK.Nombres)
+                                                                AS NickName,
                                 -------------- support attributes
                                 A.Categoria_Seccion             AS Categoria_Seccion,
                                 A.Categoria_Grupo               AS Categoria_Grupo,
@@ -63,8 +61,17 @@ query_unified:  &query_unified
                                 A.Habilitado_Tematika = 'S'
                     INNER JOIN  Disponibilidades D
                         ON      A.Id_Disponibilidad = D.Id_Disponibilidad AND
+                                --------------- condition
                                 D.Id_Esquema = 'PROD' AND
                                 D.Pedido_especial = 'N'
+                    ----------- One of these two must have an entry
+                    LEFT JOIN   Socios2 S
+                        ON      C.Id_Sucursal_Socio = S.Id_Sucursal AND
+                                C.Id_Socio = S.Id_Socio
+                    LEFT JOIN   Socios2 STMK
+                        ON      C.Id_Sucursal_Socio = STMK.Id_Sucursal AND
+                                C.Id_Socio = STMK.Id_Socio
+                    --------------- main condition
                     WHERE       C.Estado = 'A'
                     ORDER BY    C.Id_Comentario DESC
             ) d
