Completed SUBJect (categories) datasets, fixed field name errors in home page datasets and created samples for many categories (see sample_data_*.py in the content directory)

--- a/content/dataset/PAGE/homeMain.yaml
+++ b/content/dataset/PAGE/homeMain.yaml
@@ -39,7 +39,7 @@ query_main:     &query_main
                 -- name capitalized by post processing
                 A.Id_Editor                     AS ImprintId,
                 E.Nombre                        AS ImprintName,
-                NULL                            AS ImprintLinkBase,
+                NULL                            AS ImprintURL,
                 -------------- Ranking
                 MVS.Orden                       AS Ranking,
                 -------------- Publishing Date
@@ -191,7 +191,7 @@ query_main:     &query_main
     query.columns:      [ "EntityType", "EntityId", "ProductId", "LinkBase", 
                           "CoverSmall", "CoverSmallGeneric", "CoverLarge", "Title", 
                           "Rating", "CommentCount", "ImprintId", "ImprintName",
-                          "ImprintLinkBase", "Ranking", "PublishingDateFormat", 
+                          "ImprintURL", "Ranking", "PublishingDateFormat", 
                           "PublishingDateFormat_list", "PublishingDateFormat_desc", 
                           "PublishingDateValue", "LanguageCode", "LanguageCode_list", 
                           "LanguageCode_desc", "ExtentType", "ExtentType_list", 
@@ -264,7 +264,7 @@ augment_query_authors:  &augment_query_authors
                         CGRF_Role.RV_Meaning        AS ContributorRole_desc,
                         AU.Id_Autor                 AS ContributorId,
                         AU.Descripcion              AS ContributorName,
-                        NULL                        AS ContributorLinkBase,
+                        NULL                        AS ContributorURL,
                         -------------- support attributes
                         A.Categoria_Seccion         AS Categoria_Seccion
             FROM        Articulos_Mesa_Recomendados AMR
@@ -298,7 +298,7 @@ augment_query_authors:  &augment_query_authors
     query.group:        [ "ProductId" ]
     query.columns:      [ "ProductId", "EntryOrder",
                           "ContributorRole", "ContributorRole_list", "ContributorRole_desc",
-                          "ContributorId", "ContributorName", "ContributorLinkBase",
+                          "ContributorId", "ContributorName", "ContributorURL",
                           "Categoria_Seccion" ]
     query.post:         [ "dataset.lib.tmkArticulos.contributorTitle",
                           "dataset.lib.tmkArticulos.contributorCalcURL"
